# quran-ebooks

./: CONFIG_GUIDE.md  Cargo.toml  README.md  README_TECHNICAL.md  sampleenv  tafsir_config.json  translation_config.json
download-ebooks/arabic-indopak-translation-sahih-intl/: 1. Al-Fatihah.epub  10. Yunus.epub  100. Al-'Adiyat.epub  101. Al-Qari'ah.epub  102. At-Takathur.epub  103. Al-'Asr.epub  104. Al-Humazah.epub  105. Al-Fil.epub  106. Quraysh.epub  107. Al-Ma'un.epub  108. Al-Kawthar.epub  109. Al-Kafirun.epub  11. Hud.epub  110. An-Nasr.epub  111. Al-Masad.epub  112. Al-Ikhlas.epub  113. Al-Falaq.epub  114. An-Nas.epub  12. Yusuf.epub  13. Ar-Ra'd.epub  14. Ibrahim.epub  15. Al-Hijr.epub  16. An-Nahl.epub  17. Al-Isra.epub  18. Al-Kahf.epub  19. Maryam.epub  2. Al-Baqarah.epub  20. Taha.epub  21. Al-Anbya.epub  22. Al-Hajj.epub  23. Al-Mu'minun.epub  24. An-Nur.epub  25. Al-Furqan.epub  26. Ash-Shu'ara.epub  27. An-Naml.epub  28. Al-Qasas.epub  29. Al-'Ankabut.epub  3. Ali 'Imran.epub  30. Ar-Rum.epub  31. Luqman.epub  (+74 more)
src/: env.rs  html_generator.rs  main.rs  verse.rs
src/quran_com/: footnote.rs  get_surah_details.rs  get_tafsir_details.rs  get_tafsir_for_surah.rs  get_verses_by_chapter.rs  mod.rs  oauth2_token.rs
src/quran_com/apis/: get_footnote.rs  get_tafsir_for_surah.rs  get_verses_by_chapter.rs  mod.rs  (+1 more)
src/tafsir/: config.rs  generate_html.rs  mod.rs  tafsir.rs  tafsir_html_generator.rs
src/translations/: config.rs  generate_html.rs  mod.rs  translations_html_generator.rs  verse.rs
src/utils/: http.rs
static/: quran_surahs.json  tafsirs.json
(+5 files in other folders)
