[package]
name = "quran-epubs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
thiserror = "1.0.61"
dotenv = "0.15.0"
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.11.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"